html overflow fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,13 @@
     src: url('/fonts/Shabnam.ttf');
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Shabnam', sans-serif;
+    overflow-x: hidden;
 }
 
 .bg-banafsh {
@@ -18,8 +23,4 @@ body {
 .MuiMenu-root ul {
     background-color: rgb(167, 169, 255);
     color: rgb(0, 0, 0);
-}
-
-body {
-    overflow-x: hidden;
 }
